--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,6 +1,10 @@
 *, *::after, *::before { box-sizing: border-box }
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+body {
+    overflow-x: hidden;
 }
 
 :root { font-family: 'Inter', sans-serif; }
@@ -162,6 +166,9 @@ li a:hover {
 }
 .portfolio .swiper-slide {
     height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .portfolio .swiper-slide a {
     width: 100%;
@@ -171,9 +178,6 @@ li a:hover {
     width: 100%;
     height: 100%;
     border-radius: 7px;
-}
-.portfolio .swiper-slide-active{
-    transition: .4s;
 }
 .portfolio .title-project {
     font-weight: 800;
